Dependency injection added, modules added

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,20 +1,19 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
 }
 
 android {
+    namespace 'com.octaneocatane.data'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.octaneocatane.shoppinglist"
         minSdk 24
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -30,29 +29,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
-    buildFeatures {
-        dataBinding true
-    }
-    namespace 'com.octaneocatane.shoppinglist'
 }
 
 dependencies {
     implementation project(path: ':domain')
-    implementation project(path: ':data')
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0.'
-
-    // View
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.cardview:cardview:1.0.0'
 
     // Room
     def roomVersion = "2.4.3"
@@ -64,9 +50,6 @@ dependencies {
     def coroutinesVersion = "1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
-
-    // ViewModelScope
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
 
     // Dagger 2
     def dagger_version = "2.42"
