--- a/data/build.gradle
+++ b/data/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
 
     // Dagger 2
-    def dagger_version = "2.42"
+    def dagger_version = '2.44.2'
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0"
