--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -34,7 +34,7 @@ android {
 dependencies {
 
     // Dagger 2
-    def dagger_version = "2.42"
+    def dagger_version = '2.44.2'
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.5.0"
@@ -42,7 +42,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 }
